@@ -1,3 +1,3 @@
 Trace: &check('within fork') at line 9
-Trace: &fork(&closure2:9) = sleep.bridges.io.IOObject@922804 at line 8
+Trace: &fork(&closure2:9) = sleep.bridges.io.IOObject@ba0f36 at line 8
 Trace: &check('outside of fork') at line 12
