@@ -1,0 +1,10 @@
+this is A test :)
+this is A test :)AAAAAXA
+Warning: checkError(): 1 error(s): invalid unicode escape \u004  - must be hex digits at 1 at line 13
+Warning: checkError(): 2 error(s): invalid unicode escape \u004  - must be hex digits at 1; not enough remaning characters for \uXXXX at 1 at line 17
+Warning: checkError(): 2 error(s): invalid unicode escape \uAZBC - must be hex digits at 1; not enough remaning characters for \uXXXX at 1 at line 21
+this is A test :)
+this is A test :)AAAAAXA
+Warning: checkError(): 1 error(s): invalid unicode escape \x4  - must be hex digits at 1 at line 35
+Warning: checkError(): 2 error(s): invalid unicode escape \x4  - must be hex digits at 1; not enough remaning characters for \xXX at 1 at line 39
+Warning: checkError(): 2 error(s): invalid unicode escape \xAZ - must be hex digits at 1; not enough remaning characters for \xXX at 1 at line 43
