@@ -2,8 +2,11 @@
 ===========
 - added sizeof("data format") to return the size (in bytes) of the
   data structure represented by the specified format string. 
-- attempting an invalid useage of the index op now fires a runtime
+- attempting an invalid usage of the index op now fires a runtime
   warning notifying the scripter of what happened.
+- added \x and \u escapes for parsed literal strings... \xXX allows a
+  char to be specified and \uXXXX allows a unicode char to be specified.
+  X is expected to be a hex byte.
 
 2.1-beta 9  (6 Nov 06)
 ===========
